--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "type": "git",
     "url": "https://github.com/papillonbits/freestyler.git"
   },
+  "author": {
+    "name": "MTS",
+    "url": "https://github.com/mts"
+  },
   "scripts": {
     "clean-up": "rm -rf node_modules package-lock.json .storybook-static .coverage",
     "install-packages": "npm install",
+    "install-papillonbits-latest": "npm i \"@papillonbits/library\"@latest && npm i \"@papillonbits/setup\"@latest && lerna run install-papillonbits-latest --stream",
     "bootstrap": "npm-run-all build-storybook lint:format test report-coverage",
     "build-storybook": "build-storybook -c .storybook -o .storybook-static",
     "prebuild-storybook": "NODE_ENV=develop npm run test:generate-output",
@@ -30,7 +35,7 @@
   },
   "devDependencies": {
     "@axe-core/react": "^4.4.5",
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.19.6",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
@@ -40,13 +45,14 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-classes": "^7.19.0",
     "@babel/plugin-transform-react-jsx": "^7.19.0",
-    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/plugin-transform-spread": "^7.19.0",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/register": "^7.18.9",
     "@babel/runtime": "^7.19.4",
-    "@papillonbits/library": "^0.49.0",
+    "@papillonbits/library": "^0.51.0",
+    "@papillonbits/setup": "^0.51.0",
     "@storybook/addon-a11y": "^6.5.12",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-backgrounds": "^6.5.12",
