--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "install-packages": "npm install",
     "install-papillonbits-latest": "npm i \"@papillonbits/library\"@latest && npm i \"@papillonbits/setup\"@latest && lerna run install-papillonbits-latest --stream",
     "bootstrap": "npm-run-all build-storybook lint:format test report-coverage",
-    "build-storybook": "build-storybook -c .storybook -o .storybook-static",
+    "build-storybook": "storybook build -c .storybook -o .storybook-static",
     "prebuild-storybook": "NODE_ENV=develop npm run test:generate-output",
     "lint:format": "npm-run-all lint format",
     "lint": "npm-run-all lint:js:jsx lint:css:scss",
@@ -30,7 +30,7 @@
     "test:tdd": "jest --watch --onlyChanged --silent=false --verbose",
     "test:generate-output": "jest --coverage=false --json --outputFile=.jest-test-results.json || true",
     "report-coverage": "dotenv ./codecov -t %CODECOV_TOKEN%",
-    "start-storybook": "start-storybook -p 7007 -c .storybook",
+    "start-storybook": "storybook dev -p 7007 -c .storybook",
     "deploy-storybook": "gh-pages -d .storybook-static"
   },
   "devDependencies": {
@@ -51,24 +51,32 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/register": "^7.22.5",
     "@babel/runtime": "^7.22.5",
-    "@papillonbits/library": "^0.78.0",
-    "@papillonbits/setup": "^0.78.0",
-    "@storybook/addon-a11y": "^6.5.16",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-backgrounds": "^6.5.16",
-    "@storybook/addon-controls": "^6.5.16",
-    "@storybook/addon-docs": "^6.5.16",
-    "@storybook/addon-jest": "^6.5.16",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-storysource": "^6.5.16",
-    "@storybook/addon-viewport": "^6.5.16",
-    "@storybook/addons": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.5.16",
-    "@storybook/source-loader": "^6.5.16",
-    "@storybook/theming": "^6.5.16",
+    "@papillonbits/library": "^0.81.0",
+    "@papillonbits/setup": "^0.81.0",
+    "@storybook/addon-a11y": "^7.0.24",
+    "@storybook/addon-actions": "^7.0.24",
+    "@storybook/addon-backgrounds": "^7.0.24",
+    "@storybook/addon-controls": "^7.0.24",
+    "@storybook/addon-docs": "^7.0.24",
+    "@storybook/addon-essentials": "^7.0.24",
+    "@storybook/addon-highlight": "^7.0.24",
+    "@storybook/addon-interactions": "^7.0.24",
+    "@storybook/addon-jest": "^7.0.24",
+    "@storybook/addon-links": "^7.0.24",
+    "@storybook/addon-measure": "^7.0.24",
+    "@storybook/addon-outline": "^7.0.24",
+    "@storybook/addon-storyshots": "^7.0.24",
+    "@storybook/addon-storyshots-puppeteer": "^7.0.24",
+    "@storybook/addon-storysource": "^7.0.24",
+    "@storybook/addon-styling": "^1.3.2",
+    "@storybook/addon-toolbars": "^7.0.24",
+    "@storybook/addon-viewport": "^7.0.24",
+    "@storybook/manager-api": "^7.0.24",
+    "@storybook/preview-api": "^7.0.24",
+    "@storybook/react": "^7.0.24",
+    "@storybook/react-webpack5": "^7.0.24",
+    "@storybook/source-loader": "^7.0.24",
+    "@storybook/theming": "^7.0.24",
     "@svgr/webpack": "^8.0.1",
     "@testing-library/react": "^14.0.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -85,7 +93,7 @@
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.2.1",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "^8.43.0",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -105,7 +113,7 @@
     "jest-axe": "^7.0.1",
     "jsdom": "^22.1.0",
     "jsdom-global": "^3.0.2",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^13.2.3",
     "markdown-loader": "^8.0.0",
     "mini-css-extract-plugin": "^2.7.6",
     "nodemon": "^2.0.22",
@@ -115,10 +123,11 @@
     "postcss-preset-env": "^8.5.1",
     "postcss-scss": "^4.0.6",
     "prettier": "^2.8.8",
-    "react-router-dom": "^6.13.0",
+    "react-router-dom": "^6.14.1",
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
+    "storybook": "^7.0.24",
     "style-loader": "^3.3.3",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.5",
@@ -127,7 +136,7 @@
     "stylelint-prettier": "^3.0.0",
     "stylelint-scss": "^5.0.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.88.0",
+    "webpack": "^5.88.1",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
